--- a/dashboards/apoio-flowclimate.erb
+++ b/dashboards/apoio-flowclimate.erb
@@ -2,7 +2,7 @@
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="team-name" data-view="Text"></div>
+      <div data-id="flowclimate-team-name" data-view="Text"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="cmdLast" data-view="Number" data-title="Última Semana" data-prefix="R$"></div>
